--- a/views/win.erb
+++ b/views/win.erb
@@ -1,3 +1,3 @@
-You rolled a <%= @my_roll %> <br> Your opponent rolled a <%= @opp_roll %> <br> You Lose :("
+You rolled a <%= @my_roll %> <br> Your opponent rolled a <%= @opp_roll %> <br> You Win :)
 
 this is from win.erb
